--- a/base_templates/global/base.html
+++ b/base_templates/global/base.html
@@ -1,17 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        {% include "recipes/partials/head.html" %}
-        <title> {% block title %} Home | {% endblock title %} Recipes </title>
-    </head>
-    <body>
-        {% include "recipes/partials/header.html" %}
-        {% include "recipes/partials/search.html" %}
+{% include 'recipes/partials/head.html' %}
 
-        <main class="content-container">
-            {% block content %}{% endblock content %}
-        </main>
+<body>
+    {% include 'recipes/partials/header.html' %}
+    {% include 'recipes/partials/search.html' %}
 
-        {% include "recipes/partials/footer.html" %}
-    </body>
+    <main class="main-content-container">
+        {% block content %}{% endblock content %}
+    </main>
+
+    {% include 'recipes/partials/footer.html' %}
+</body>
+
 </html>
